# super_resolution

./: .env  .env.example  .gitignore  .gitlab-ci.yml  README.md  docker-compose.yaml  dvc.yaml  main.py  pyproject.toml  requirements.txt  test.jpg.dvc
.dvc/: config  superresolution-348908-cd1185a9333d.json
Docker/model_service/: .env  Dockerfile  pyproject.toml
models/: model.pth.dvc
notebooks/: RGB_channel.ipynb
src/app/: inference.py
src/data/: data_load.py
src/features/: build_dataset.py
src/models/: model.py  predict_model.py  train_model.py
src/visualization/: visualize.py
tests/: test_build_dataset.py
workflow/: Snakefile
