[tool.poetry]
name = "super_resolution"
version = "0.1.0"
description = "project for MLOps course"
authors = ["Maxim Suvorov <msuvorov7@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "~=1.22.3"
torch = "~=1.11.0"
Pillow = "~=9.1.0"
six = "~=1.16.0"
torchvision = "~=0.12.0"
matplotlib = "~=3.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
