[tool.poetry]
name = "super_resolution"
version = "0.1.0"
description = "project for MLOps course"
authors = ["msuvorov7 <msuvorov7@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "~=1.22.3"
torch = "~=1.11.0"
Pillow = "~=9.1.0"
six = "~=1.16.0"
torchvision = "~=0.12.0"
snakemake = "~=7.3.8"
dvc = {extras = ["s3", "gdrive"], version = "^2.10.2"}
mlflow = "^1.25.1"
matplotlib = "^3.5.2"
psycopg2 = "^2.9.3"
python-dotenv = "^0.20.0"
fastapi = {extras = ["all"], version = "^0.78.0"}
python-multipart = "^0.0.5"
protobuf = "~3.20.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
